Added dist, updated package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "module": "dist/esm/bundle.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "rimraf dist && rollup -c && npm run pack",
